[package]
name = "core-staking"
version = "0.0.1"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
borsh = "0.11.0"
borsh-derive = "0.11.0"
solana-program = "1.16.0"
thiserror = "1.0.40"


[lib]
name = "corestaking"
crate-type = ["cdylib", "lib"]
